error interceptor y login

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap"
       rel="stylesheet"
     />
-    <title>Admin Pro Angular - an angular 10 CLI template</title>
+    <title>Kimirina Admin</title>
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/favicon.png"
+      href="assets/images/logo-circular.png"
     />
   </head>
 
